Update the view

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -5,6 +5,6 @@
     <ul>
       <li><%= b.location.display_address %></li>
       <li><%= b.phone %></li>
-      <li><%= b.rating %></li>
+      <li>Average Yelp Rating: <%= b.rating %> Stars</li>
     </ul>
 <% end %>
